--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,8 @@
 2005-11-23  Pascal Obry  <pascal@obry.net>
 
+	* partial.out:
+	Initial revision.
+
 	* partial.adb:
         New non regression test for the partial download.
 
