--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-25  Dmitriy Anisimkov  <anisimkov@ada-ru.org>
+
+	* ssl-gnutls.ads:
+	Replaced by CBIND generated and manually fixed.
+
 2005-11-23  Dmitriy Anisimkov  <anisimkov@ada-ru.org>
 
 	* ssl-gnutls.ads:
