--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,13 @@
+2005-11-29  Pascal Obry  <pascal@obry.net>
+
+	* test_wsdl7.wsdl, test_wsdl7.out:
+	Initial revision.
+	Work for EB29-007.
+
+	* makefile:
+	(WSDL_ATESTS): Add test_wsdl6.
+	Work for EB29-007.
+
 2005-11-24  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* tmem.adb:
