--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* aws-client.adb:
+	Do not retry request is read timeout exceeded.
+
 2005-11-23  Pascal Obry  <pascal@obry.net>
 
 	* aws-mime.ads:
