--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-10  Pascal Obry  <pascal@obry.net>
+
+	* we_test_ajax.html:
+	Fix some typos.
+
 2005-12-08  Florian Villoing  <villoing@adacore.com>
 
 	* we_test_ajax.html, web_elements.adb:
