--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-13  Pascal Obry  <pascal@obry.net>
+
+	* sessions5.adb, sessions5.out:
+	New version.
+	Work for EC13-008.
+
 2005-11-30  Pascal Obry  <pascal@obry.net>
 
 	* test_wsdl7.adb:
