* aws-attachments.adb:
* makefile:

* aws-services-dispatchers-timer.adb:

* aws-services-dispatchers-timer.ads:

* timer.adb:

* aws-net-generic_sets.adb:

* aws-net-std__gnat.adb:

* aws-net-thin.ads:

* aws-net.adb:

* aws-server-http_utils.adb:

* aws-services-download.adb:

* aws-utils.ads:
(GMT_Clock): New routine. Was in AWS.OS_Lib, now implemented here
 using standard Ada 2005 features.

* poll.adb:

* poll.ads:

* shared.gpr:

* makefile:

* aws-os_lib__gnat.adb:

* aws-os_lib__posix.adb:

* aws-os_lib__win32.adb:

* src.gpr:

* aws-os_lib.ads:

* MANIFEST:

* INSTALL:

* aws.texi.tmplt:

* check_config.c:
Modified to generate the definitions into AWS.OS_Lib directly
instead of the child package AWS.OS_Lib.Definitions as AWS.OS_Lib
is now empty.

* aws-utils.adb:
(GMT_Clock): New routine. Was in AWS.OS_Lib, now implemented here
 using standard Ada 2005 features.
Code clean-up. The AWS.OS_Lib package has been completely removed. The
GMT_Clock is now implemented using the standard Ada 2005 support and is found
in AWS.Utils. This means that the three implementations (POSIX, Win32, GNAT)
for this package have been removed together with all the circuitry to select
one in the GNAT project files.

--- a/INSTALL
+++ b/INSTALL
@@ -21,27 +21,21 @@ This release requires an Ada compiler supporting some Ada 2005 features as it
 is using the Ada.Containers libraries. It is possible to build this release
 using the following compilers :
 
-	GNAT Pro 5.04a
+	GNAT Pro 5.04a1
 	GNAT GPL 2006 Edition
-
 
 Building from CVS
 -----------------
 
-If you are using GNAT GPL 2005 Edition or GNAT GAP 2005 Edition you need to
-apply the patch found in support/gnat-2005-editions.dif.
-
 To run the templates_parser's non-regression tests with XML/Ada support, you
-need to uncomment the 'with "xmlada";' line in templates_parser.gpr project
-file.
-
+need to uncomment the 'with "aws_xmlada";' line in templates_parser.gpr
+project file.
 
 To build the documentation in HTML, PDF, PostScript, INFO and plain text
 format you need to have a working makeinfo and Tex package installed on
 your system.
 
    $ make build_doc
-
 
 Building on Windows
 -------------------
