Add:   - Add support for user defined types in ada2wsdl. For example types...

--- a/docs/TODO
+++ b/docs/TODO
@@ -181,7 +181,14 @@ implemented:
   It would certainly be easier to support only GNAT.Sockets and use the
   selector facilities instead of the AWS's poll() support.
 
+- Add support for user defined types in ada2wsdl. For example types
+  like:
 
+     type My_Int is range 1 .. 10;
+     subtype My_Number is My_Int range 1 .. 2;
+
+  are not referenced into the schema at the moment.
+ 
 
 =============== Point to fix/implement/review before next release (2.3.0)
 
