Many clean-up in the build procedure: - Default values for SOCKET and LDAP are now identical on Windows and UNIX.   Both are disabled now. - Remove all references to POSIX for AWS.OS_Lib implementation as this   has been removed since some time. - Use only the GNAT driver instead of gnatmake, gnatclean... This is   cleaner and easier to maintain. Only GNAT is set in makefile.conf. - INSTALL variable is now set by default to the compiler on the PATH.   So there is no need to change INSTALL when installing in the default   location (GNAT root). - Add header to all makefiles. - Add checks for INSTALL variable. The compiler must be found in the PATH   and we make sure it is not empty.

--- a/INSTALL
+++ b/INSTALL
@@ -9,7 +9,7 @@ If you have not installed XML/Ada into the standard directory and plan to
 build AWS with SOAP support you must be sure that ADA_PROJECT_PATH point to
 the XML/Ada projects. See XML/Ada documentation.
 
-Look for ADASOCKETS, ASIS, POSIX, and INSTALL make's variables. Then building
+Look for ADASOCKETS, ASIS, XMLADA and INSTALL make's variables. Then building
 AWS is as simple as:
 
    $ make setup build install
