Minor editing, add LDAP reference.

--- a/INSTALL
+++ b/INSTALL
@@ -9,8 +9,8 @@ If you have not installed XML/Ada into the standard directory and plan to
 build AWS with SOAP support you must be sure that ADA_PROJECT_PATH point to
 the XML/Ada projects. See XML/Ada documentation.
 
-Look for ADASOCKETS, ASIS, XMLADA and INSTALL make's variables. Then building
-AWS is as simple as:
+Look for SOCKET, ASIS, XMLADA, LDAP and INSTALL make's variables.
+Then building AWS is as simple as:
 
    $ make setup build install
 
