--- a/INSTALL
+++ b/INSTALL
@@ -19,17 +19,14 @@ the AWS User's Guide.
 
 This release requires an Ada compiler supporting some Ada 2005 features as it
 is using the Ada.Containers libraries. It is possible to build this release
-using the following compilers :
+starting with the following compilers:
 
-	GNAT Pro 5.04a1
-	GNAT GPL 2006 Edition
+	GNAT Pro 6.0.2
 
-Building from CVS
------------------
+	GNAT GPL 2007 Edition
 
-To run the templates_parser's non-regression tests with XML/Ada support, you
-need to uncomment the 'with "aws_xmlada";' line in templates_parser.gpr
-project file.
+Building from Subversion
+------------------------
 
 To build the documentation in HTML, PDF, PostScript, INFO and plain text
 format you need to have a working makeinfo and Tex package installed on
