Implementation of the new build support.
Now the static and shared versions are built if possible.
The default installed version can be configured using the
new DEFAULT_LIBRARY_TYPE make variable. The setup is now
persistent using a generated makefile.setup makefile.
The shared version is built only if supported by the
plateform.
--
Work for H505-007.

--- a/INSTALL
+++ b/INSTALL
@@ -9,7 +9,9 @@ If you have not installed XML/Ada into the standard directory and plan to
 build AWS with SOAP support you must be sure that ADA_PROJECT_PATH point to
 the XML/Ada projects. See XML/Ada documentation.
 
-Look for SOCKET, ASIS, XMLADA, LDAP and INSTALL make's variables.
+Look for SOCKET, ASIS, XMLADA, LDAP, INSTALL, ENABLE_SHARED and
+DEFAULT_LIBRARY_TYPE make's variables.
+
 Then building AWS is as simple as:
 
    $ make setup build install
@@ -21,7 +23,7 @@ This release requires an Ada compiler supporting some Ada 2005 features as it
 is using the Ada.Containers libraries. It is possible to build this release
 starting with the following compilers:
 
-	GNAT Pro 6.0.2
+	GNAT Pro 6.1.1
 
 	GNAT GPL 2007 Edition
 
